--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@
 
 
 .writings-2{
-    width: 70%;
+    width: 60%;
     margin: auto;
 }
 
@@ -106,6 +106,15 @@
     cursor: pointer;
 }
 
+.button-1:hover{
+    background-color: burlywood;
+}
+
+.button-2:hover{
+    background-color: burlywood;
+    color: white;
+}
+
 
 .light-text{
     color: rgb(219, 66, 117);
@@ -127,5 +136,4 @@
 
 .med-text{
     font-size: 15px;
-
 }
